cmake_minimum_required(VERSION 4.0)
project(clg_dsa)

set(CMAKE_CXX_STANDARD 20)

add_executable(clg_dsa main.cpp
        assgnment1_q1.cpp
        assignment1q_2.cpp
        assign1_q3.cpp
        assign1_q4.cpp
        assign_q5.cpp
        assign_2q1.cpp
        assign2_q2.cpp
        assign2_q3.cpp
        assign2_q4.cpp
        assign3_q1.cpp
        assign3_q2.cpp
        assign3_q3.cpp
        assign3_q4.cpp
        assign3_q5.cpp
        assignn3_q1.cpp
        assignn3_q2.cpp
        assign_6.cpp)
